--- a/app/views/partials/forms/addSwiperForm.ejs
+++ b/app/views/partials/forms/addSwiperForm.ejs
@@ -21,5 +21,5 @@
     </div>
     <label for="swiperDescInput" class="text-muted mt-2 mb-2">Swiper Description</label>
     <input id="swiperDescInput" class="form-control mb-2" placeholder="Add description">
-    <button id="submitBtn" type="button" class="btn btn-primary mt-3">Add Swiper</button>
+    <button id="submitBtn" type="button" class="btn btn-primary mt-3" disabled>Add Swiper</button>
 </form>
