--- a/app/views/partials/forms/deleteProductForm.ejs
+++ b/app/views/partials/forms/deleteProductForm.ejs
@@ -1,7 +1,7 @@
 <form id="delProductForm" data-header="flush-headingThree">
     <div class="input-group mb-2" bis_skin_checked="1">
         <span class="input-group-text"><i class="fa-solid fa-hashtag me-1"></i>|<i class="fa-solid fa-magnifying-glass ms-1"></i></span>
-        <input type="text" class="form-control productIdInput" placeholder="Product ID or Name" aria-label="Id"
+        <input type="text" class="form-control productIdInput" placeholder="Ürün isimi veya ID'si girin" aria-label="Id"
             aria-describedby="input-group-left">
     </div>
     <div class="card d-flex flex-column flex-md-row d-none position-relative overflow-hidden" bis_skin_checked="1">
@@ -12,23 +12,22 @@
         <img id="productImg" src="https://placehold.co/1000x1000?text=Click+me\nto+upload\nimage"
             class="col-12 col-md-6 col-lg-4">
         <div class="card-body d-flex flex-column justify-content-center p-lg-3" bis_skin_checked="1">
-            <label for="productName" class="text-muted">Product Name</label>
+            <label for="productName" class="text-muted">Ürün İsimi</label>
             <h5 id="productName" class="card-title">Provide Product Info</h5>
-            <label for="productDesc" class="text-muted">Product Description</label>
+            <label for="productDesc" class="text-muted">Ürün Hakkında</label>
             <p id="productDesc" class="card-text">Provide Product Info</p>
-            <label for="productAdditionalDesc" class="text-muted">Product Additional Description</label>
+            <label for="productAdditionalDesc" class="text-muted">Ürün Ek Açıklaması</label>
             <p id="productAdditionalDesc" class="card-text mb-2">
                 Click me to edit</p>
-            <label for="productBenefits" class="text-muted">Product Benefits</label>
+            <label for="productBenefits" class="text-muted">Ürün Avantajları</label>
             <div id="productBenefits" class="d-flex flex-wrap mt-1"></div>
-            <label for="productCategories" class="text-muted">Product Categories</label>
+            <label for="productCategories" class="text-muted">Ürün Kategorisi</label>
             <div id="productCategories" class="d-flex flex-wrap mt-2"></div>
-            <small class="text-muted mt-3">Last updated</small>
+            <small class="text-muted mt-3">Son güncelleme</small>
             <p id="productTimeStamp" class="card-text mt-1"><small class="text-muted"></small></p>
         </div>
     </div>
-    <button id="submitBtn" type="button" class="btn btn-danger mt-3 d-none">Delete
-        Product</button>
+    <button id="submitBtn" type="button" class="btn btn-danger mt-3 d-none">Ürünü Sil</button>
     <!-- Not shown -->
     <div class="d-none">
         <input id="productCategoriesInput" class="form-control" placeholder="Split with comma">
