--- a/app/views/partials/nav.ejs
+++ b/app/views/partials/nav.ejs
@@ -9,8 +9,8 @@
             <div class="contact d-flex">
                 <a href="tel:+905491774700" title="Telefon" class="nav-link me-3"><i
                         class="fa-solid fa-phone me-2"></i>+90 (549) 177 4700</a>
-                <a href="mailto:kemiger@gmail.com" title="Mail gönder" class="nav-link"><i
-                        class="fa-solid fa-envelope me-2"></i>kemiger@gmail.com</a>
+                <a href="mailto:info@kemiger.com.tr" title="Mail gönder" class="nav-link"><i
+                        class="fa-solid fa-envelope me-2"></i>info@kemiger.com.tr</a>
             </div>
         </div>
     </div>
@@ -26,13 +26,13 @@
             <div class="navbar-collapse collapse" id="navbarCollapse" bis_skin_checked="1">
                 <ul class="navbar-nav navbar-collapse align-items-end justify-content-end my-3 m-lg-auto">
                     <li class="nav-item">
-                        <a class="nav-link" title="Ürünlerimiz" href="#productsPre" aria-current="page">Ürünlerimiz</a>
+                        <a class="nav-link" title="Ürünlerimiz" href="/products" aria-current="page">Ürünlerimiz</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" title="Hakkımızda" href="#aboutUs">Hakkımızda</a>
+                        <a class="nav-link" title="Hakkımızda" href="/aboutus">Hakkımızda</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" title="İletişim" href="#contact">İletişim</a>
+                        <a class="nav-link" title="İletişim" href="/contact">İletişim</a>
                     </li>
             </div>
         </div>
