--- a/app/views/partials/poster.ejs
+++ b/app/views/partials/poster.ejs
@@ -42,23 +42,23 @@
         </div>
 
         <div
-            class="features card d-flex flex-column flex-lg-row justify-content-between position-absolute top-100 start-50 translate-middle py-4 px-3 py-lg-5 px-lg-5 col-11 col-md-8 col-lg-11 col-xxl-8">
+            class="features card d-flex flex-column flex-lg-row justify-content-between position-absolute top-100 start-50 translate-middle py-4 px-3 py-lg-5 px-lg-5 col-11 col-md-8 col-lg-11 col-xxl-9">
             <span
-                class="feature d-flex flex-column align-items-center justify-content-lg-center p-3 fs-2 m-lg-0 col-12">
+                class="feature d-flex flex-column align-items-center justify-content-lg-center p-3 fs-2 m-lg-0 col-12 col-lg-3">
                 <span class="d-flex flex-column align-items-center">
                     <h5 class="m-0">Kemiger</h5>
                     <p class="m-0">Dental Art Partner</p>
                 </span>
             </span>
             <span
-                class="feature d-flex flex-column align-items-center justify-content-lg-center p-3 fs-2 m-lg-0 col-12 mt-3 mb-3">
+                class="feature d-flex flex-column align-items-center justify-content-lg-center p-3 fs-2 m-lg-0 col-12 my-3 col-lg-3">
                 <span class="d-flex flex-column align-items-center">
                     <h5 class="m-0">CureO9</h5>
                     <p class="m-0">Active Oxygen</p>
                 </span>
             </span>
             <span
-                class="feature d-flex flex-column align-items-center justify-content-lg-center p-3 fs-2 m-lg-0 col-12">
+                class="feature d-flex flex-column align-items-center justify-content-lg-center p-3 fs-2 m-lg-0 col-12 col-lg-3">
                 <span class="d-flex flex-column align-items-center">
                     <h5 class="m-0">Gunesol</h5>
                     <p class="m-0">Bedelsiz Isınma</p>
