--- a/app/views/partials/testimonials.ejs
+++ b/app/views/partials/testimonials.ejs
@@ -1,5 +1,5 @@
 <section id="testimonials" class="col-12 section-spacing-m">
-    <h1 class="text-center mb-5">Müşteri <br> Memnuniyyeti</h1>
+    <h1 class="text-center mb-5">Müşteri <br> Memnuniyeti</h1>
     <div class="testimonials-wrapper card m-auto col-11 col-lg-8">
         <div class="glide testimonials-glide">
             <div class="glide__track" data-glide-el="track">
