--- a/app/public/index.css
+++ b/app/public/index.css
@@ -2,26 +2,35 @@
 
 #poster {
 
-    .go-product{
+    .go-product {
         position: absolute;
         bottom: 20%;
         left: 5%;
     }
+
     .glide__slide {
         padding: 0;
         cursor: auto;
+
         .card {
             --bs-card-border-width: 0;
             --bs-card-border-radius: 0;
             --bs-card-inner-border-radius: 0;
             --bs-card-border-color: 0;
-            background-color: rgb(0,0,0, 0.6);
-            .card.card-body{
+            background-color: rgb(0, 0, 0, 0.6);
+
+            .card.card-body {
                 background-color: transparent;
+                .card-title{
+                    color: #fff;
+                    filter: invert(100%);
+                }
             }
-            .card{
+
+            .card {
                 filter: invert(100%);
-                .img-fluid{
+
+                .img-fluid {
                     width: 35%;
                     position: absolute;
                     top: 5%;
@@ -46,6 +55,32 @@
         .feature {
             background-color: #54b0b731;
             border-radius: 1rem;
+        }
+    }
+}
+
+@media (max-width: 768px) {
+    #poster {
+        margin-bottom: 15rem;
+        .poster-image{
+            object-position: 70% 50%;
+        }
+        .features.card {
+            .feature span h5,
+            .feature span p {
+                font-size: 1.5rem !important;
+            }
+        }
+    }
+}
+
+@media (min-width: 992px) and (max-width: 1400px) {
+    #poster {
+        .features.card {
+            .feature span h5,
+            .feature span p {
+                font-size: 1rem !important;
+            }
         }
     }
 }
@@ -87,11 +122,12 @@
 /* Testimonials */
 
 #testimonials {
-    .profile-picture{
+    .profile-picture {
         width: 75px;
         height: 75px;
         object-fit: cover;
     }
+
     .testimonials-wrapper.card {
         --bs-card-border-radius: 1rem;
         --bs-card-inner-border-radius: 0;
