--- a/app/views/dashboard.ejs
+++ b/app/views/dashboard.ejs
@@ -42,7 +42,7 @@
                     </a>
                     <a type="button" class="btn btn-primary mb-2 me-2" role="button" aria-controls="productsMenu">
                         <span class="rounded-pill">
-                            <i class="fa-solid fa-layer-group me-2"></i>Products
+                            <i class="fa-solid fa-layer-group me-2"></i>Ürünler
                         </span>
                     </a>
                 </div>
@@ -51,7 +51,7 @@
             <div class="main-menu-wrapper col-12 col-lg-7 col-xl-8 ms-lg-3">
                 <div class="menu d-flex flex-column align-items-center">
                     <div id="productsMenu" class="main-menu col-12 d-none">
-                        <h1 class="fw-normal my-3"><i class="fa-solid fa-layer-group me-2"></i>Product<span
+                        <h1 class="fw-normal my-3"><i class="fa-solid fa-layer-group me-2"></i>Ürünler<span
                                 class="loader"></span></h1>
                         <div class="menu-section">
                             <div class="accordion accordion-flush" id="accordionFlush" bis_skin_checked="1">
@@ -60,7 +60,7 @@
                                         <button class="accordion-button fw-bold collapsed" type="button"
                                             data-bs-toggle="collapse" data-bs-target="#flush-collapseOne"
                                             aria-expanded="false" aria-controls="flush-collapseOne">
-                                            Add Product
+                                            Ürün Ekle
                                             <span class="loader ms-1"></span>
                                         </button>
                                     </h2>
@@ -78,7 +78,7 @@
                                         <button class="accordion-button fw-bold collapsed" type="button"
                                             data-bs-toggle="collapse" data-bs-target="#flush-collapseTwo"
                                             aria-expanded="false" aria-controls="flush-collapseTwo">
-                                            Update Product
+                                            Ürünü Güncelle
                                             <span class="loader ms-1"></span>
                                         </button>
                                     </h2>
@@ -96,7 +96,7 @@
                                         <button class="accordion-button fw-bold collapsed" type="button"
                                             data-bs-toggle="collapse" data-bs-target="#flush-collapseThree"
                                             aria-expanded="false" aria-controls="flush-collapseThree">
-                                            Delete Product
+                                            Ürünü Sil
                                             <span class="loader ms-1"></span>
                                         </button>
                                     </h2>
@@ -114,7 +114,7 @@
                                         <button class="accordion-button fw-bold collapsed" type="button"
                                             data-bs-toggle="collapse" data-bs-target="#flush-collapseFour"
                                             aria-expanded="false" aria-controls="flush-collapseFour">
-                                            Get Product by ID or Name
+                                            Ürünü ada veya ID'ye göre bul
                                             <span class="loader ms-1"></span>
                                         </button>
                                     </h2>
