--- a/app/views/index.ejs
+++ b/app/views/index.ejs
@@ -35,7 +35,7 @@
                             <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
                                 integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
                                 crossorigin="anonymous"></script>
-                            <script defer type="module" src="js/utils.js"></script>
+                            <script defer src="js/utils.js"></script>
                             <script defer type="module" src="js/glideParams.js"></script>
                             <script defer src="index.js"></script>
                             <script src="js/validation.js"></script>
