--- a/app/views/partials/footer.ejs
+++ b/app/views/partials/footer.ejs
@@ -1,7 +1,7 @@
 <footer class="col-12 section-spacing-m d-flex flex-column justify-content-end align-items-center">
     <div class="footer-wrapper px-2 col-12 col-xl-10">
         <div class="contact-wrapper container-fluid d-flex justify-content-between align-items-center mb-4">
-            <div class="top d-flex flex-column col-6 justify-content-between col-xl-10">
+            <div class="top d-flex flex-column col-6 justify-content-between col-xl-9">
                 <a class="col-10 col-md-6 col-lg-5 col-xl-2 mb-2 mb-lg-0" title="Kemiger" href="#"><img
                         class="img-fluid" src="../assets/logo.png" alt=""></a>
                 <div class="socials d-flex col-7 col-md-4 d-lg-none">
@@ -16,8 +16,8 @@
             <div class="contact d-flex flex-column">
                 <a href="tel:+905491774700" title="Telefon" class="nav-link me-3"><i
                         class="fa-solid fa-phone me-2"></i>+90 (549) 177 4700</a>
-                <a href="mailto:kemiger@gmail.com" title="Mail gönder" class="nav-link"><i
-                        class="fa-solid fa-envelope me-2"></i>kemiger@gmail.com</a>
+                <a href="mailto:info@kemiger.com.tr" title="Mail gönder" class="nav-link"><i
+                        class="fa-solid fa-envelope me-2"></i>info@kemiger.com.tr</a>
             </div>
         </div>
         <div class="copyright container-fluid mt-3 py-3 mb-2">
