--- a/app/views/partials/forms/addProductForm.ejs
+++ b/app/views/partials/forms/addProductForm.ejs
@@ -13,24 +13,24 @@
         <img id="productImg" src="https://placehold.co/1000x1000?text=Click+me\nto+upload\nimage"
             class="addProductImg col-12 col-md-6 col-lg-4">
         <div class="card-body d-flex flex-column justify-content-center p-lg-3" bis_skin_checked="1">
-            <small class="text-muted">Product Name</small>
+            <small class="text-muted">Ürün İsimi</small>
             <h5 id="productName" contenteditable="true" class="card-title">Click me to edit</h5>
-            <small class="text-muted">Product Description</small>
+            <small class="text-muted">Ürün Hakkında</small>
             <p id="productDesc" contenteditable="true" class="card-text mb-2">
                 Click me to edit</p>
-            <small class="text-muted">Product Additional Description</small>
+            <small class="text-muted">Ürün Ek Açıklaması</small>
             <p id="productAdditionalDesc" contenteditable="true" class="card-text mb-2">
                 Click me to edit</p>
-            <label for="productBenefits" class="text-muted">Product Benefits</label>
-            <input id="productBenefitsInput" class="form-control mb-2" placeholder="Split with comma">
-            <label for="productCategories" class="text-muted">Product Categories</label>
-            <input id="productCategoriesInput" class="form-control" placeholder="Split with comma">
+            <label for="productBenefits" class="text-muted">Ürün Avantajları</label>
+            <input id="productBenefitsInput" class="form-control mb-2" placeholder="Virgülle ayır">
+            <label for="productCategories" class="text-muted">Ürün Kategorisi</label>
+            <input id="productCategoriesInput" class="form-control" placeholder="Kategori ekle">
 
             <!-- Non Shown -->
             <div class="d-none">
                 <h5 class="ms-3 mt-3 position-absolute top-0 start-0 product-id">Id: <span id="productId"></span>
                 </h5>
-                <small class="text-muted mt-3">Last updated</small>
+                <small class="text-muted mt-3">Son güncelleme</small>
                 <div id="productCategories" class="d-flex flex-wrap mt-1"></div>
                 <div id="productBenefits" class="d-flex flex-wrap mt-1"></div>
                 <p id="productTimeStamp" class="card-text mt-1"><small class="text-muted"></small></p>
@@ -38,5 +38,5 @@
             <!-- Non Shown -->
         </div>
     </div>
-    <button id="submitBtn" type="button" class="btn btn-primary mt-3">Add Product</button>
+    <button id="submitBtn" type="button" class="btn btn-primary mt-3">Ürün Ekle</button>
 </form>
