Finalized main website

--- a/app/views/contact.ejs
+++ b/app/views/contact.ejs
@@ -29,25 +29,25 @@
             <h1 class="text-center py-3 mb-5">İletişim</h1>
             <div class="aboutUs-wrapper d-flex flex-column align-items-center px-0 p-5 p-md-5">
                 <div class="col-10 d-flex flex-column align-items-center">
-                    <span><i class="fa-solid fa-compass"></i>
+                    <span class="contact-link"><i class="fa-solid fa-compass"></i>
                         <h5 class="text-start d-inline ms-1">Adres : Turgut Özal Mahallesi. 2179 Cadde No:12\C. Ankara,
                             Türkiye</h5>
                     </span>
-                    <span class="my-3"><i class="fa-solid fa-phone fs-6"></i>
-                        <a href="tel:+903123544808" title="Telefon" class="text-decoration-none text-white">
+                    <span class="my-3 contact-link"><i class="fa-solid fa-phone fs-6"></i>
+                        <a href="tel:+903123544808" title="Telefon" class="contact-link text-decoration-none text-white">
                             <h5 class="text-start d-inline ms-1">Sabit Numara : +90 (312) 354 4808</h5>
                         </a>
                     </span>
-                    <span><i class="fa-brands fa-whatsapp fs-5"></i>
-                        <a href="https://wa.me/+905491774700" title="Telefon" class="text-decoration-none text-white">
+                    <span class="contact-link"><i class="fa-brands fa-whatsapp fs-5"></i>
+                        <a href="https://wa.me/+905491774700" title="WhatsApp" class="contact-link text-decoration-none text-white">
                             <h5 class="text-start d-inline ms-1">WhatsApp : +90 (549) 177 4700</h5>
                         </a>
                     </span>
                     <div class="socials d-flex col-12 col-md-6 col-xl-3 mt-3 justify-content-between">
                         <a href="https://www.facebook.com/profile.php?id=100063100876876" title="Facebook"
-                            class="nav-link fw-bold"><i class="fa-brands fa-facebook-f me-2"></i>FaceBook</a>
-                        <a href="https://www.instagram.com/kemigerkimya" title="Instagram" class="nav-link mx-4 fw-bold"><i class="fa-brands fa-instagram me-2"></i>Instagram</a>
-                        <a href="https://www.linkedin.com/company/kemiger-kimya/" title="LinkedIn" class="nav-link fw-bold"><i class="fa-brands fa-linkedin-in me-2"></i>LinkedIn</a>
+                            class="nav-link fw-bold contact-link"><i class="fa-brands fa-facebook-f me-2"></i>Facebook</a>
+                        <a href="https://www.instagram.com/kemigerkimya" title="Instagram" class="nav-link mx-4 fw-bold contact-link"><i class="fa-brands fa-instagram me-2"></i>Instagram</a>
+                        <a href="https://www.linkedin.com/company/kemiger-kimya/" title="LinkedIn" class="nav-link fw-bold contact-link"><i class="fa-brands fa-linkedin-in me-2"></i>LinkedIn</a>
                     </div>
                 </div>
             </div>
