--- a/app/public/css/about-us.css
+++ b/app/public/css/about-us.css
@@ -14,6 +14,12 @@ body {
     }
 }
 
+.contact-link:hover{
+    color: #050301 !important;
+    transition: color 0.3s ease-in ;
+    
+}
+
 footer {
     margin-top: auto;
 }
