--- a/app/views/partials/products-preview.ejs
+++ b/app/views/partials/products-preview.ejs
@@ -4,7 +4,7 @@
         class="product-cards-wrapper container-fluid d-flex flex-column flex-lg-row col-lg-11 justify-content-lg-evenly">
         <div class="card mb-3 mb-lg-0 col-12 col-lg-3" bis_skin_checked="1">
             <a href="/products">
-                <img src="/assets/products/aspirevac.png" class="card-img" alt="card-img-overlay">
+                <img src="/assets/products/5.png" class="card-img" alt="card-img-overlay">
                 <div class="card-img-overlay d-flex flex-column align-items-start justify-content-end"
                     bis_skin_checked="1">
                     <h5 class="card-title text-white">Kemiger</h5>
